fix: layout bugfixes

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -78,7 +78,7 @@
     padding-right: 30px;
     padding-bottom: 28px;
 
-    max-width: 1199px;
+    max-width: $tablet-width;
   }
 
   .page-header__logo {
